# HelpyCords-v1

./: CMakeLists.txt  HelpyCordsEditor.cpp  HelpyCordsEditor.h  HelpyCordsPlugin.cpp  HelpyCordsPlugin.h  README_BUILD.md  README_FL_STUDIO.md  c_cpp_properties.json  settings.json  tasks.json
.github/workflows/: build.yml
